--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.1</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/eu.mihosoft.vrl.jcsg/jcsg -->
         <dependency>
             <groupId>eu.mihosoft.vrl.jcsg</groupId>
